--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-requests==2.24.0
-wget==3.2
+gdown==3.12.2
 glob2==0.7
-numpy==1.19.2
-beautifulsoup4==4.9.3
-dataclasses==0.6
-git+git://github.com/josephcappadona/m3u8downloader.git#egg=m3u8downloader
-munch==2.5.0
 jsonextended==0.7.11
+nltk==3.5
